--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,15 +3,25 @@ body {
 	display: block;
 	margin: 0 auto;
 	font-family: Helvetica, Arial;
+	font-weight: 300;
 	.wrap {
 		margin-left: 0;
 		margin-right: 0;
 		width: 100%;
-
+		img {
+			max-width: 100%;
+		}
 		a {
 			text-decoration: none;
 			color: #fff;
 		}
+		a:hover {
+			color: #E5E103;
+		}
+		ul {
+			text-align: center;
+			padding-left: 0;
+			}
 		li {
 			list-style: none;
 			display: inline-block;
@@ -20,7 +30,7 @@ body {
 		header {	
 			background-image: url(../img/head.jpg);
 			background-size: cover;
-			height: 1400px;
+			height: 1500px;
 			width: 100%;
 			margin: 0;
 			padding: 0;
@@ -28,43 +38,167 @@ body {
 			.header-top {
 				display: block;
 				width: 100%;
-				min-height: 29em;
+				min-height: 19em;
 				background-color: rgba(0, 0, 0, .6);
 				color: #fff;
 
 				nav {
 					 width: 100%;
-					 margin: 1% 0 1% 0;
-					.left-nav-top {
-						float: left;
-						width: 30%;
-						padding: 2em 0 2em 3em;
-					}
-					.right-nav-top {
-						float: left;
-						width: 60%;
-						padding: 2em 0 2em 4em;
-					}
-				}	
+					 height: 60px;
+					 padding: 0.7em 0 2em 0;
+					 font-size: 0.9em;					
+						li {
+							padding: 0 0.4em 0 0.4em;
+						}		
+						input {
+
+							.search-nav {
+								background-color: #000;
+								border: 0;
+							}
+						} 	
+					}	
 
 				.header-logo {
 					text-align: center;
-					padding: 4em 0 2em 0;
+					padding: 3% 0 2% 0;
 
 					h1 {
-
+						font-size: 3em;
+						font-weight: 300;
 					}
 					h3 {
-
+						font-size: 1.1em;
+						font-weight: 200;
+						opacity: 0.5;
 					}
+				}
+				.header-menu {
+					padding: 3% 0 1% 0;
+					font-size: 0.9em;
+
+					li {
+						padding: 0 2em 0 1em;
+					}
+
 				}
 
 			}
+			.carousel-product {
+				width: 88%;
+				min-height: 38em;
+				float: left;
+				margin: 4% 0 0 6%;
+				background-color: #fff;
+			}
 			section {
-				img {
-					max-width: 100%;
+				article {
+					width: 20%;
 					float: left;
-					padding: 7% 0 3% 15%;
+
+				}
+			}	
+		}
+
+		.content {
+			width: 100%;
+			height: 700px;
+			margin-top: 40px;
+			background-color: #fff;
+			nav {
+				a {
+					color: #000;
+					&:hover {
+						color: #E5E103;
+					}
+				} 
+				li {
+					padding-right: 1.5em;
+				}
+			}
+			section {
+				article {
+					width: 20%;
+					float: left;
+
+				}
+			}
+		}
+
+		footer {
+			background-color: #191919;
+			width: 100%;
+			height: 500px;
+			margin-top: 80px;
+			color: #fff;
+			.footer-top-text {
+				height: 50px;
+				background-color: #5A5A5A;
+				text-align: center;
+				h3 {
+					padding-top: 13px;
+				}
+			}
+			.footer-menu {
+				width: 90%;
+				padding: 3% 0 3% 10%;
+
+				text-align: left;
+				float: left;
+				p {
+					text-align: left;					
+				}
+				span {
+					p {
+						font-size: 0.9em;
+					}
+				}
+				.footer-category {
+					width: 22%;
+					float: left;
+				}
+				.footer-user {
+					width: 22%;
+					float: left;
+				}
+				.footer-info {
+					width: 22%;
+					float: left;
+				}
+				.footer-contact {
+					width: 22%;
+					float: left;
+				}
+			}
+			form {
+				width: 50%;
+				margin: 18% 0 2% 10%;
+				button {
+					background-color: #E5E103;
+					padding: 0.7em 3em 0.7em 3em;
+					border: 0;
+					color: #fff;
+					&:hover {
+						background-color: #5A5A5A;
+						transition: 0.6s;
+					}
+				}
+				input {
+					margin-right: 1%;
+					padding: 0.7em 3em 0.7em 3em;
+					border: 0;
+					color: #000;
+				}
+			}
+			.footer-copyright {
+				width: 100%;
+				height: 50px;
+				margin-top: 3%;
+				background-color: #fff;
+				color: #000;
+				p {
+					font-size: 0.8em;
+					padding: 1.2% 0 0 10%;
 				}
 			}	
 		}	
