--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,12 +1,17 @@
+
 $yellow: #E5E103;
 $green: #5A5A5A;
 body {
 	max-width: 1600px;
+	height: 100%;
 	display: block;
 	margin: 0 auto;
 	font-family: Helvetica, Arial;
 	font-weight: 300;
 	.wrap {
+		 display: flex;
+  		 flex-direction: column;
+  		 height: 100%;
 		margin-left: 0;
 		margin-right: 0;
 		width: 100%;
@@ -47,7 +52,7 @@ body {
 				nav {
 					 width: 100%;
 					 height: 60px;
-					 padding: 0 0 2em 0;
+					 padding: 1em 0 2em 0;
 					 font-size: 0.9em;					
 						li {
 							padding: 0 1% 0 0.5%;
@@ -58,17 +63,16 @@ body {
 								opacity: 0.9;
 								padding: 0.5em 0 0.5em 1em;
 								border: 0;							
-							}	
-						span {
-								padding: 1em 0 0 0;
-								vertical-align: middle;
-							img {
-								width: 22%;
-								height: 17%;
-								margin: 2em 0 0 0;
-								opacity: 0.8;
 							}
-						}							
+								
+							img {
+								width: 92%;
+								height: 87%;
+								padding: 0;
+								vertical-align: middle;
+								margin: 0;
+								opacity: 0.8;
+							}							
 					}	
 
 				.header-logo {
@@ -167,8 +171,10 @@ body {
 		.content {
 			width: 100%;
 			height: 700px;
+			flex: 1 0 auto;
 			margin-top: 40px;
 			background-color: #fff;
+
 			nav {
 				a {
 					color: #000;
@@ -220,92 +226,198 @@ body {
 			}
 		}
 //////////////////////////////////////////////////////////////// CATEGORY TEMPLATE
-	.header-category {
-			background-color: #FFFFFF;
+	.header-category-main {
+		background-image: url(../img/head.jpg);
+			background-size: cover;
+			
 			width: 100%;
-			height: 500px;
-			a {
-				color: #000;
-			}
-			.header-category-left {
-				width: 25%;
-				margin: 3% 2% 2% 4%;
-				float: left;				
-				clear: both;
+			margin: 0;
+			padding: 0;
 
-				.breadcrumb {
-					float: left;
-					li:nth-child(1) {
-						border: 1px solid #000;
-						padding: 0.1em 0 0 0;
-						vertical-align: middle;
+			.header-top {
+				display: block;
+				width: 100%;
+				min-height: 19em;
+				background-color: rgba(0, 0, 0, .6);
+				color: #fff;
+
+				nav {
+					 width: 100%;
+					 height: 60px;
+					 padding: 1em 0 2em 0;
+					 font-size: 0.9em;					
+						li {
+							padding: 0 1% 0 0.5%;
+						}		
+						input {
+								background-color: #000;
+								color: #fff;
+								opacity: 0.9;
+								padding: 0.5em 0 0.5em 1em;
+								border: 0;							
+							}
+								
+							img {
+								width: 92%;
+								height: 87%;
+								padding: 0;
+								vertical-align: middle;
+								margin: 0;
+								opacity: 0.8;
+							}							
+					}	
+
+				.header-logo {
+					text-align: center;
+					padding: 3% 0 2% 0;
+
+					h1 {
+						font-size: 3em;
+						font-weight: 300;
 					}
-					li:nth-child(2) {
-						border: 1px solid #000;
-						vertical-align: middle;
-						padding: 0.5em;
+					h3 {
+						font-size: 1.1em;
+						font-weight: 200;
+						opacity: 0.5;
 					}
-				}
-				.menu-category {
-					float: left;
-					clear: both;
 					li {
-						display: block;
-						padding: 0.7em 4em 0.7em 0.7em;
-						border: 0.5px solid #fff;
-						background-color: $green;
-						text-align: left;
-						&:hover {
-							background-color: #000;
-						}
-						a {
-							color: #fff;
+						padding-left: 35px;	
+						hr {
+							width: 70px;													
+							border-width: 2px;							
+							border-style: solid;
+							color: #FFFFFF;
 						}
 					}
 				}
+				.header-menu {
+					padding: 3% 0 1% 0;
+					font-size: 1em;
+					font-weight: 500;
+
+					li {
+						padding: 0 2% 0 1%;
+					}
+				}
+
 			}
-			.header-category-right {
-				width: 60%;
-				float: left;
-				margin: 5% 2% 2% 2%;
-					img {
+	}
+
+		.header-category {
+				background-color: #FFFFFF;
+				width: 100%;
+				height: 450px;
+				a {
+					color: #000;
+				}
+				.header-category-left {
+					width: 25%;
+					margin: 3% 2% 0 4%;
+					float: left;				
+					clear: both;
+
+					.breadcrumb {
+						float: left;
+						li:nth-child(1) {
+							border: 1px solid #000;
+							padding: 0.1em 0 0 0;
+							vertical-align: middle;
+						}
+						li:nth-child(2) {
+							border: 1px solid #000;
+							vertical-align: middle;
+							padding: 0.5em;
+						}
+					}
+					.menu-category {
 						float: left;
 						clear: both;
-					}
-					.header-content {
-						display: block;	
-						padding: 2% 1% 2% 2%;
-						h2 {
-							
-							color: $yellow;
+						li {
+							display: block;
+							padding: 0.7em 4em 0.7em 0.7em;
+							border: 0.5px solid #fff;
+							background-color: $green;
+							text-align: left;
+							&:hover {
+								background-color: #000;
+							}
+							a {
+								color: #fff;
+							}
 						}
-						p {
-							
-						}
 					}
-			}	
-		}
-		section {
+				}
+				.header-category-right {
+					width: 60%;
+					float: left;
+					margin: 5% 2% 2% 2%;
+						img {
+							float: left;
+							clear: both;
+						}
+						.header-content {
+							display: block;	
+							padding: 2% 1% 2% 2%;
+							h2 {
+								
+								color: $yellow;
+							}
+							p {
+								
+							}
+						}
+				}	
+			}
+			
+		.category-content {
 			background-color: #fff;
-			height: 1000px;
+			// height: 1000px;
 			width: 100%;
 			margin-top: 0;
-			h3 {
-				margin-top: 0;
-			}
-			aside {
-				width: 20%;
+			
+			.category-content-left {
+				width: 17.5%;
 				float: left;
 				clear: both;
+				margin-left: 4%;
+				h4,h3 {
+					margin: 0;
+				}
+				hr {
+					border-width: 2px;							
+					border-style: solid;
+					color: #A8A8A8;
+				}
 				li {
 					display: block;
+					border: 1px solid $green;
+					margin-bottom: 1.5em;
+					img {
+						max-width: 60%;
+					}
+						ul {	
+							color: $yellow;
+							del {
+								font-size: 0.9em;
+								color: #000;
+								opacity: 0.8;
+							}
+						}
+
 				}
+			}
+
+			.category-content-right {
+				width: 75%;
+				float: right;
+
 			}
 		}
 //////////////////////////////////////////////////////////////// END CATEGORY TEMPLATE		
 		footer {
 			background-color: #191919;
 			width: 100%;
+			flex: 0 0 auto;
 			height: 500px;
 			margin-top: 80px;
 			color: #fff;
@@ -314,6 +426,7 @@ body {
 				background-color: $green;
 				text-align: center;
 				h3 {
+					margin-top: 0;
 					padding-top: 13px;
 				}
 			}
