--- a/project/css/main.css
+++ b/project/css/main.css
@@ -228,16 +228,24 @@ body {
         float: left;
         clear: both; }
         body .wrap .header-category .header-category-left .breadcrumb {
+          width: 80%;
           float: left; }
           body .wrap .header-category .header-category-left .breadcrumb li:nth-child(1) {
+            width: 14%;
             border: 1px solid #000;
             padding: 0.1em 0 0 0;
             vertical-align: middle; }
           body .wrap .header-category .header-category-left .breadcrumb li:nth-child(2) {
+            width: 75%;
             border: 1px solid #000;
             vertical-align: middle;
             padding: 0.5em; }
+            body .wrap .header-category .header-category-left .breadcrumb li:nth-child(2):hover {
+              background-color: #E5E103;
+              color: #fff;
+              transition: 0.6s; }
         body .wrap .header-category .header-category-left .menu-category {
+          width: 80%;
           float: left;
           clear: both; }
           body .wrap .header-category .header-category-left .menu-category li {
@@ -267,12 +275,14 @@ body {
       width: 100%;
       margin-top: 0; }
       body .wrap .category-content .category-content-left {
-        width: 17.5%;
+        width: 20%;
         float: left;
         clear: both;
         margin-left: 4%; }
         body .wrap .category-content .category-content-left h4, body .wrap .category-content .category-content-left h3 {
-          margin: 0; }
+          margin: 0;
+          font-weight: 400;
+          font-size: 1.3em; }
         body .wrap .category-content .category-content-left hr {
           border-width: 2px;
           border-style: solid;
@@ -281,17 +291,122 @@ body {
           display: block;
           border: 1px solid #5A5A5A;
           margin-bottom: 1.5em; }
+          body .wrap .category-content .category-content-left li .shares {
+            color: #000;
+            width: 0;
+            height: 0;
+            border-top: 50px solid red;
+            border-left: 50px solid transparent;
+            float: right;
+            margin-bottom: 1em; }
+            body .wrap .category-content .category-content-left li .shares p {
+              color: #fff;
+              margin-top: -40px;
+              margin-left: -35px;
+              -o-transform: rotate(45deg);
+              -ms-transform: rotate(45deg);
+              -moz-transform: rotate(45deg);
+              -webkit-transform: rotate(45deg);
+              transform: rotate(45deg); }
           body .wrap .category-content .category-content-left li img {
-            max-width: 60%; }
+            max-width: 50%;
+            padding-left: 19%; }
           body .wrap .category-content .category-content-left li ul {
             color: #E5E103; }
             body .wrap .category-content .category-content-left li ul del {
               font-size: 0.9em;
               color: #000;
               opacity: 0.8; }
+            body .wrap .category-content .category-content-left li ul h4 {
+              color: #E5E103;
+              display: inline-block; }
       body .wrap .category-content .category-content-right {
         width: 75%;
         float: right; }
+        body .wrap .category-content .category-content-right .category-content-counter {
+          width: 100%;
+          display: block; }
+          body .wrap .category-content .category-content-right .category-content-counter .category-name-counter {
+            width: 35%;
+            float: left; }
+          body .wrap .category-content .category-content-right .category-content-counter .category-counter {
+            width: 65%;
+            float: right;
+            text-align: right; }
+        body .wrap .category-content .category-content-right .category-sort {
+          float: left;
+          clear: both; }
+        body .wrap .category-content .category-content-right .category-main {
+          width: 100%; }
+          body .wrap .category-content .category-content-right .category-main ul {
+            width: 100%;
+            display: inline-block; }
+            body .wrap .category-content .category-content-right .category-main ul li {
+              width: 28%;
+              float: left;
+              padding-left: 3%;
+              margin-top: 2em;
+              text-align: center; }
+              body .wrap .category-content .category-content-right .category-main ul li .shares {
+                color: #000;
+                width: 0;
+                height: 0;
+                border-top: 50px solid red;
+                border-left: 50px solid transparent;
+                float: right;
+                margin-bottom: 1em; }
+                body .wrap .category-content .category-content-right .category-main ul li .shares p {
+                  color: #fff;
+                  margin-top: -40px;
+                  margin-left: -35px;
+                  -o-transform: rotate(45deg);
+                  -ms-transform: rotate(45deg);
+                  -moz-transform: rotate(45deg);
+                  -webkit-transform: rotate(45deg);
+                  transform: rotate(45deg); }
+              body .wrap .category-content .category-content-right .category-main ul li hr {
+                width: 40px;
+                border-width: 2px;
+                border-style: solid;
+                color: #A8A8A8; }
+              body .wrap .category-content .category-content-right .category-main ul li h4 {
+                margin: 0 0 0 0;
+                font-size: 1.3em;
+                font-weight: 300; }
+              body .wrap .category-content .category-content-right .category-main ul li h5 {
+                margin: 0 0 0 0;
+                font-size: 1.2em;
+                font-weight: 300;
+                color: #E5E103; }
+              body .wrap .category-content .category-content-right .category-main ul li small {
+                opacity: 0.9; }
+              body .wrap .category-content .category-content-right .category-main ul li a {
+                display: block;
+                width: 68%;
+                margin-left: 16%;
+                padding: 0 0 0 0; }
+                body .wrap .category-content .category-content-right .category-main ul li a:hover {
+                  opacity: 0.8; }
+              body .wrap .category-content .category-content-right .category-main ul li .no-product {
+                width: 40%;
+                background-color: #5A5A5A;
+                opacity: 0.8;
+                color: #000;
+                padding: 0.5em 0 0.5em 0;
+                font-size: 0.8em;
+                float: left;
+                margin-left: 31%;
+                margin-top: 4%; }
+              body .wrap .category-content .category-content-right .category-main ul li .in-product {
+                width: 40%;
+                background-color: #000;
+                opacity: 0.8;
+                color: #fff;
+                padding: 0.5em 0 0.5em 0;
+                font-size: 0.8em;
+                float: left;
+                margin-left: 31%;
+                margin-top: 4%; }
     body .wrap footer {
       background-color: #191919;
       width: 100%;
