--- a/scss/main.scss
+++ b/scss/main.scss
@@ -228,8 +228,7 @@ body {
 //////////////////////////////////////////////////////////////// CATEGORY TEMPLATE
 	.header-category-main {
 		background-image: url(../img/head.jpg);
-			background-size: cover;
-			
+			background-size: cover;			
 			width: 100%;
 			margin: 0;
 			padding: 0;
@@ -317,19 +316,29 @@ body {
 					clear: both;
 
 					.breadcrumb {
+						width: 80%;
 						float: left;
 						li:nth-child(1) {
+							width: 14%;
 							border: 1px solid #000;
 							padding: 0.1em 0 0 0;
 							vertical-align: middle;
+							
 						}
 						li:nth-child(2) {
+							width: 75%;
 							border: 1px solid #000;
 							vertical-align: middle;
 							padding: 0.5em;
+							&:hover {
+								background-color:  $yellow;
+								color: #fff;
+								transition: 0.6s;
+							}
 						}
 					}
 					.menu-category {
+						width: 80%;
 						float: left;
 						clear: both;
 						li {
@@ -371,17 +380,18 @@ body {
 			
 		.category-content {
 			background-color: #fff;
-			// height: 1000px;
 			width: 100%;
 			margin-top: 0;
 			
 			.category-content-left {
-				width: 17.5%;
+				width: 20%;
 				float: left;
 				clear: both;
 				margin-left: 4%;
 				h4,h3 {
 					margin: 0;
+					font-weight: 400;
+					font-size: 1.3em;
 				}
 				hr {
 					border-width: 2px;							
@@ -392,8 +402,28 @@ body {
 					display: block;
 					border: 1px solid $green;
 					margin-bottom: 1.5em;
+					.shares {
+						color: #000;
+						// width: 30%;
+						width: 0;
+						height: 0;
+						border-top: 50px solid red; 
+						border-left: 50px solid transparent;
+						float: right;
+						margin-bottom: 1em;
+						p {    color: #fff;
+						    margin-top: -40px;
+						    margin-left: -35px;
+						-o-transform: rotate(45deg);
+						-ms-transform: rotate(45deg);
+						-moz-transform: rotate(45deg);
+						-webkit-transform: rotate(45deg);
+						transform: rotate(45deg);
+						}
+					}
 					img {
-						max-width: 60%;
+						max-width: 50%;
+						padding-left: 19%;
 					}
 						ul {	
 							color: $yellow;
@@ -401,6 +431,10 @@ body {
 								font-size: 0.9em;
 								color: #000;
 								opacity: 0.8;
+							}
+							h4 {
+								color: $yellow;
+								display: inline-block;
 							}
 						}
 
@@ -411,6 +445,109 @@ body {
 				width: 75%;
 				float: right;
 
+				.category-content-counter {
+					width: 100%;
+					display: block;
+					.category-name-counter {
+						width: 35%;
+						float: left;
+					}
+					.category-counter {
+						width: 65%;
+						float: right;
+						text-align: right;
+					}
+				}
+				.category-sort {
+					float: left;
+					clear: both;
+				}
+				.category-main {
+					width: 100%;
+
+					ul {
+						width: 100%;
+						display: inline-block;
+					li {
+						width: 28%;
+						float: left;
+						padding-left: 3%;
+						margin-top: 2em;
+						text-align: center;
+						.shares {
+							color: #000;
+							// width: 30%;
+							width: 0;
+							height: 0;
+							border-top: 50px solid red; 
+							border-left: 50px solid transparent;
+							float: right;
+							margin-bottom: 1em;
+							p {    color: #fff;
+							    margin-top: -40px;
+							    margin-left: -35px;
+							-o-transform: rotate(45deg);
+							-ms-transform: rotate(45deg);
+							-moz-transform: rotate(45deg);
+							-webkit-transform: rotate(45deg);
+							transform: rotate(45deg);
+							}
+						}						
+
+						hr {
+							width: 40px;							
+							border-width: 2px;							
+							border-style: solid;
+							color: #A8A8A8;
+						}
+						h4 {
+							margin: 0 0 0 0;
+							font-size: 1.3em;
+							font-weight: 300;
+						}					
+						h5 {
+							margin: 0 0 0 0;
+							font-size: 1.2em;
+							font-weight: 300;
+							color: $yellow;
+							}
+						small {
+							opacity: 0.9;
+						}
+						a {
+							display: block;
+							width: 68%;
+							margin-left: 16%;
+							padding: 0 0 0 0;
+							&:hover {
+								opacity: 0.8;
+							}
+						}
+						.no-product {
+								width: 40%;
+								background-color: $green;
+								opacity: 0.8;
+								color: #000;
+								padding: 0.5em 0 0.5em 0;
+								font-size: 0.8em;
+								float: left;
+								margin-left: 31%;
+								margin-top: 4%;
+							}
+						.in-product {
+								width: 40%;
+								background-color: #000;
+								opacity: 0.8;
+								color: #fff;
+								padding: 0.5em 0 0.5em 0;
+								font-size: 0.8em;
+								float: left;
+								margin-left: 31%;
+								margin-top: 4%;
+						}	
+					}
+				}
+			}	
 			}
 		}
 //////////////////////////////////////////////////////////////// END CATEGORY TEMPLATE		
