--- a/scss/main.scss
+++ b/scss/main.scss
@@ -311,9 +311,9 @@ body {
 				}
 				.header-category-left {
 					width: 25%;
-					margin: 3% 2% 0 4%;
-					float: left;				
-					clear: both;
+					margin: 3% 0 0 4%;
+					float: left;
+				
 
 					.breadcrumb {
 						width: 80%;
@@ -323,6 +323,13 @@ body {
 							border: 1px solid #000;
 							padding: 0.1em 0 0 0;
 							vertical-align: middle;
+								&:hover {
+								background-color: #5A5A5A;
+								transition: 0.6s;
+								a {
+									color: #FFFFFF;
+								}
+							}
 							
 						}
 						li:nth-child(2) {
@@ -331,16 +338,17 @@ body {
 							vertical-align: middle;
 							padding: 0.5em;
 							&:hover {
-								background-color:  $yellow;
-								color: #fff;
+								background-color: #5A5A5A;
 								transition: 0.6s;
+								a {
+									color: #FFFFFF;
+								}
 							}
 						}
 					}
 					.menu-category {
 						width: 80%;
 						float: left;
-						clear: both;
 						li {
 							display: block;
 							padding: 0.7em 4em 0.7em 0.7em;
@@ -359,14 +367,14 @@ body {
 				.header-category-right {
 					width: 60%;
 					float: left;
-					margin: 5% 2% 2% 2%;
-						img {
-							float: left;
-							clear: both;
-						}
+					   margin: 8% 2% 2% 0;
+						
 						.header-content {
 							display: block;	
-							padding: 2% 1% 2% 2%;
+							img {
+							float: left;
+							margin-right: 4%;
+							}
 							h2 {
 								
 								color: $yellow;
@@ -445,9 +453,9 @@ body {
 				width: 75%;
 				float: right;
 
-				.category-content-counter {
-					width: 100%;
+				.category-content-counter {					
 					display: block;
+					    margin: 0 4%;
 					.category-name-counter {
 						width: 35%;
 						float: left;
@@ -460,7 +468,7 @@ body {
 				}
 				.category-sort {
 					float: left;
-					clear: both;
+					margin: 0 4%;
 				}
 				.category-main {
 					width: 100%;
@@ -474,6 +482,10 @@ body {
 						padding-left: 3%;
 						margin-top: 2em;
 						text-align: center;
+						img {
+							max-width: 60%;
+							padding-left: 19%;
+						}
 						.shares {
 							color: #000;
 							// width: 30%;
@@ -519,6 +531,10 @@ body {
 							width: 68%;
 							margin-left: 16%;
 							padding: 0 0 0 0;
+							img {
+								max-width: 100%;
+								padding-left:0;
+							}
 							&:hover {
 								opacity: 0.8;
 							}
@@ -547,8 +563,32 @@ body {
 						}	
 					}
 				}
-			}	
+
+				}
 			}
+			.pag-nav {
+					display: block;
+					height: 50px;
+					margin: 5% 0 0 35%;
+					
+						ul {
+							display: inline-block;
+							li {
+								color: #FFFFFF;
+								background-color: #000;
+								margin-left: 0.2em;
+								padding: 0.5em 0.8em;
+								a {
+									color: #FFFFFF;
+									font-weight: bold;
+								}
+								&:hover {
+									background-color: #5A5A5A;
+									transition: 0.6s;
+								}
+							}
+						}
+				}
 		}
 //////////////////////////////////////////////////////////////// END CATEGORY TEMPLATE		
 		footer {
