--- a/scss/main.scss
+++ b/scss/main.scss
@@ -390,7 +390,13 @@ body {
 			background-color: #fff;
 			width: 100%;
 			margin-top: 0;
-			
+			a {
+				color: #000;
+				&:hover {
+					color: #000;
+					opacity: 0.9;
+				}
+			}
 			.category-content-left {
 				width: 20%;
 				float: left;
@@ -590,7 +596,79 @@ body {
 						}
 				}
 		}
-//////////////////////////////////////////////////////////////// END CATEGORY TEMPLATE		
+//////////////////////////////////////////////////////////////// END CATEGORY TEMPLATE	
+
+//////////////////////////////////////////////////////////////////////////////////////  PRODUCT TEMPLATE
+
+	.product-content {
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: 70px 1fr 1fr 1.5fr;
+		grid-row-gap: 20px;
+		padding: 0;
+		margin: 2% 4% 2% 4%;
+		a {
+			color: #000;
+
+		}
+		.breadcrumb {
+				ul {
+					float: left;
+		
+				}
+			}
+		.product-des-main {
+			display: grid;
+			grid-template-columns: 1fr 3fr 4fr;
+			grid-gap: 1em;
+			.product-img-one, .product-img-two {
+				border: 1px solid;
+			}
+			.product-col-one {
+				display: grid;
+				grid-template-columns: 1fr;
+				grid-template-rows: repeat(3, 1fr);
+				grid-row-gap: 10px;
+			}
+
+			.product-line-order {
+				display: grid;
+				grid-template-columns: 1fr;
+				grid-template-rows: 70px 70px;
+				grid-gap: 1em;
+				text-align: left;
+				.line-order-one {
+					display: inline;
+				}
+				.line-order-two {
+					float: left;
+				}
+			}
+		}
+		.product-reviews {
+			display: grid;
+			grid-template-columns: 1fr 7fr;
+			border: 1px solid #5A5A5A;
+			box-shadow: 0px 0px 5px 0px #081104;
+			.product-reviews-name {
+				display: grid;
+				grid-template-rows: 35px 35px;
+				padding: 0.3em 0 0.5em 0.7em;
+				.reviews-row-two a {
+					padding: 0.5em 4em 0.5em 0.5em;
+					background-color: #5A5A5A;
+					color: #fff;
+				}
+			}
+			.product-reviews-text {
+				text-align: center;
+				padding: 1em;
+				color: #5A5A5A;
+			}
+		}	
+	}
+
+///////////////////////////////////////////////////////////////  END PRODUCT TEMPLATE	
 		footer {
 			background-color: #191919;
 			width: 100%;
