--- a/scss/main.scss
+++ b/scss/main.scss
@@ -494,7 +494,6 @@ body {
 						}
 						.shares {
 							color: #000;
-							// width: 30%;
 							width: 0;
 							height: 0;
 							border-top: 50px solid red; 
@@ -612,25 +611,83 @@ body {
 
 		}
 		.breadcrumb {
-				ul {
-					float: left;
-		
-				}
-			}
+						width: 30em;
+						float: left;
+						ul {
+							margin-left: -8em;
+							padding-left: 0;
+						}
+						li:nth-child(1) {
+							width: 7%;
+							border: 1px solid #000;
+							padding: 0.2em 0 0 0;
+							vertical-align: middle;
+								&:hover {
+								background-color: #5A5A5A;
+								transition: 0.6s;
+								a {
+									color: #FFFFFF;
+								}
+							}
+							
+						}
+						li:nth-child(2) {
+							width: 47%;
+							border: 1px solid #000;
+							vertical-align: middle;
+							padding: 0.5em;
+							&:hover {
+								background-color: #5A5A5A;
+								transition: 0.6s;
+								a {
+									color: #FFFFFF;
+								}
+							}
+						}
+					}
+				
 		.product-des-main {
 			display: grid;
-			grid-template-columns: 1fr 3fr 4fr;
-			grid-gap: 1em;
+			grid-template-columns: 0.6fr 2fr 4fr;
+			grid-gap: 0.5em;			
 			.product-img-one, .product-img-two {
 				border: 1px solid;
 			}
 			.product-col-one {
-				display: grid;
-				grid-template-columns: 1fr;
-				grid-template-rows: repeat(3, 1fr);
-				grid-row-gap: 10px;
+				display: table-cell;
+				text-align: center;
+				vertical-align:middle;
+				.product-img-one {
+					margin-bottom: 0.9em;
+    				width: 6.3em;
+				}
 			}
-
+			.product-col-two {
+				display: table-cell;
+				text-align: center;
+				vertical-align:middle;
+				.product-img-two {
+					width: 21.3em;
+				}
+			}
+			.product-col-three {
+				ul {
+					li {
+					display: table-cell;
+					text-align: center;
+					vertical-align:middle;
+						select {
+							padding: 0.7em;
+						}
+					}
+					li:nth-child(2) {
+						padding-left: 0.6em;
+					}
+					li:nth-child(3) {
+						float: right;
+					}
+				}
+			}
 			.product-line-order {
 				display: grid;
 				grid-template-columns: 1fr;
@@ -666,6 +723,123 @@ body {
 				color: #5A5A5A;
 			}
 		}	
+		.recom-product {
+			text-align: center;
+			h2 {
+				color: #1A1A1A;
+				font-weight: 400;
+				font-size: 1.6em;
+			}
+
+			ul {
+						width: 100%;
+						display: inline-block;
+					li {
+						width: 22%;
+						float: left;
+						padding-left: 1%;
+						margin-top: 2em;
+						text-align: center;
+						img {
+							max-width: 60%;
+							padding-left: 19%;
+						}
+						.shares {
+							color: #000;
+							width: 0;
+							height: 0;
+							border-top: 50px solid red; 
+							border-left: 50px solid transparent;
+							float: right;
+							margin-bottom: 1em;
+							p {    color: #fff;
+							    margin-top: -40px;
+							    margin-left: -35px;
+							-o-transform: rotate(45deg);
+							-ms-transform: rotate(45deg);
+							-moz-transform: rotate(45deg);
+							-webkit-transform: rotate(45deg);
+							transform: rotate(45deg);
+							}
+						}						
+						.shares-new {
+							color: #000;
+							width: 0;
+							height: 0;
+							border-top: 50px solid $yellow; 
+							border-left: 50px solid transparent;
+							float: right;
+							margin-bottom: 1.1em;
+							p {    color: #000;
+								font-size: 0.9em;
+							    margin-top: -40px;
+							    margin-left: -35px;
+							-o-transform: rotate(45deg);
+							-ms-transform: rotate(45deg);
+							-moz-transform: rotate(45deg);
+							-webkit-transform: rotate(45deg);
+							transform: rotate(45deg);
+							}
+						}
+						hr {
+							width: 40px;							
+							border-width: 2px;							
+							border-style: solid;
+							color: #A8A8A8;
+						}
+						h4 {
+							margin: 0 0 0 0;
+							font-size: 1.3em;
+							font-weight: 300;
+						}					
+						h5 {
+							margin: 0 0 0 0;
+							font-size: 1.2em;
+							font-weight: 300;
+							color: $yellow;
+							}
+						small {
+							opacity: 0.9;
+						}
+						a {
+							display: block;
+							width: 68%;
+							margin-left: 16%;
+							padding: 0 0 0 0;
+							img {
+								max-width: 100%;
+								padding-left:0;
+							}
+							&:hover {
+								opacity: 0.8;
+							}
+						}
+						.no-product {
+								width: 40%;
+								background-color: $green;
+								opacity: 0.8;
+								color: #000;
+								padding: 0.5em 0 0.5em 0;
+								font-size: 0.8em;
+								float: left;
+								margin-left: 31%;
+								margin-top: 4%;
+							}
+						.in-product {
+								width: 40%;
+								background-color: #000;
+								opacity: 0.8;
+								color: #fff;
+								padding: 0.5em 0 0.5em 0;
+								font-size: 0.8em;
+								float: left;
+								margin-left: 31%;
+								margin-top: 4%;
+						}	
+					}
+				}
+
+		}
 	}
 
 ///////////////////////////////////////////////////////////////  END PRODUCT TEMPLATE	
