--- a/project/css/main.css
+++ b/project/css/main.css
@@ -13,7 +13,8 @@ body {
     margin-right: 0;
     width: 100%; }
     body .wrap img {
-      max-width: 100%; }
+      max-width: 100%;
+      vertical-align: middle; }
     body .wrap a {
       text-decoration: none;
       color: #fff; }
@@ -111,11 +112,10 @@ body {
             opacity: 0.9; }
           body .wrap header section .carousel-product article a {
             display: block;
-            width: 68%;
-            margin-left: 16%;
+            color: #5a5a5a;
             padding: 0 0 0 0; }
             body .wrap header section .carousel-product article a:hover {
-              opacity: 0.8; }
+              opacity: 0.4; }
       body .wrap header section .banner-header img {
         width: 88%;
         float: left;
@@ -232,7 +232,7 @@ body {
           body .wrap .header-category .header-category-left .breadcrumb li:nth-child(1) {
             width: 14%;
             border: 1px solid #000;
-            padding: 0.1em 0 0 0;
+            padding: 0.2em 0 0.2em 0;
             vertical-align: middle; }
             body .wrap .header-category .header-category-left .breadcrumb li:nth-child(1):hover {
               background-color: #5A5A5A;
@@ -355,6 +355,11 @@ body {
               padding-left: 3%;
               margin-top: 2em;
               text-align: center; }
+              body .wrap .category-content .category-content-right .category-main ul li:hover {
+                overflow: hidden;
+                -moz-transition: scale(1.1);
+                -o-transition: scale(1.1);
+                -webkit-transition: scale(1.1); }
               body .wrap .category-content .category-content-right .category-main ul li img {
                 max-width: 60%;
                 padding-left: 19%; }
@@ -456,7 +461,7 @@ body {
         body .wrap .product-content .breadcrumb li:nth-child(1) {
           width: 7%;
           border: 1px solid #000;
-          padding: 0.2em 0 0 0;
+          padding: 0.2em 0 0.2em 0;
           vertical-align: middle; }
           body .wrap .product-content .breadcrumb li:nth-child(1):hover {
             background-color: #5A5A5A;
@@ -476,7 +481,7 @@ body {
       body .wrap .product-content .product-des-main {
         display: grid;
         grid-template-columns: 0.6fr 2fr 4fr;
-        grid-gap: 0.5em; }
+        grid-gap: 10px; }
         body .wrap .product-content .product-des-main .product-img-one, body .wrap .product-content .product-des-main .product-img-two {
           border: 1px solid; }
         body .wrap .product-content .product-des-main .product-col-one {
@@ -484,7 +489,7 @@ body {
           text-align: center;
           vertical-align: middle; }
           body .wrap .product-content .product-des-main .product-col-one .product-img-one {
-            margin-bottom: 0.9em;
+            margin-bottom: 18px;
             width: 6.3em; }
         body .wrap .product-content .product-des-main .product-col-two {
           display: table-cell;
@@ -514,21 +519,43 @@ body {
             float: left; }
       body .wrap .product-content .product-reviews {
         display: grid;
-        grid-template-columns: 1fr 7fr;
-        border: 1px solid #5A5A5A;
-        box-shadow: 0px 0px 5px 0px #081104; }
+        grid-template-columns: 1fr 7fr; }
         body .wrap .product-content .product-reviews .product-reviews-name {
           display: grid;
           grid-template-rows: 35px 35px;
-          padding: 0.3em 0 0.5em 0.7em; }
-          body .wrap .product-content .product-reviews .product-reviews-name .reviews-row-two a {
-            padding: 0.5em 4em 0.5em 0.5em;
+          border-right: 1px solid #5A5A5A;
+          text-align: center; }
+          body .wrap .product-content .product-reviews .product-reviews-name .reviews-row-one {
+            border-top: 1px solid #5A5A5A;
+            border-left: 5px solid #5A5A5A;
+            border-right: 5px solid #fff;
+            border-bottom: 1px solid #5A5A5A;
+            padding-top: 6px; }
+          body .wrap .product-content .product-reviews .product-reviews-name .reviews-row-two {
             background-color: #5A5A5A;
-            color: #fff; }
+            border-top: 1px solid #5A5A5A;
+            border-left: 1px solid #5A5A5A;
+            border-right: 1px solid #5A5A5A;
+            border-bottom: 1px solid #5A5A5A;
+            padding-top: 6px; }
+            body .wrap .product-content .product-reviews .product-reviews-name .reviews-row-two:hover {
+              background-color: #fff;
+              border-top: none;
+              border-left: 5px solid #5A5A5A;
+              border-right: none;
+              border-bottom: 1px solid #5A5A5A; }
+              body .wrap .product-content .product-reviews .product-reviews-name .reviews-row-two:hover a {
+                color: #000; }
+            body .wrap .product-content .product-reviews .product-reviews-name .reviews-row-two a {
+              color: #fff; }
         body .wrap .product-content .product-reviews .product-reviews-text {
           text-align: center;
           padding: 1em;
-          color: #5A5A5A; }
+          color: #5A5A5A;
+          border-top: 1px solid #5A5A5A;
+          border-left: none;
+          border-right: 1px solid #5A5A5A;
+          border-bottom: 1px solid #5A5A5A; }
       body .wrap .product-content .recom-product {
         text-align: center; }
         body .wrap .product-content .recom-product h2 {
