--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@ body {
 		width: 100%;
 		img {
 			max-width: 100%;
+			vertical-align: middle;
 		}
 		a {
 			text-decoration: none;
@@ -146,11 +147,11 @@ body {
 						}
 						a {
 							display: block;
-							width: 68%;
-							margin-left: 16%;
+						    color: #5a5a5a;
 							padding: 0 0 0 0;
+							
 							&:hover {
-								opacity: 0.8;
+								opacity: 0.4;								
 							}
 						}
 					}
@@ -321,7 +322,7 @@ body {
 						li:nth-child(1) {
 							width: 14%;
 							border: 1px solid #000;
-							padding: 0.1em 0 0 0;
+							padding: 0.2em 0 0.2em 0;
 							vertical-align: middle;
 								&:hover {
 								background-color: #5A5A5A;
@@ -488,10 +489,14 @@ body {
 						padding-left: 3%;
 						margin-top: 2em;
 						text-align: center;
-						img {
-							max-width: 60%;
-							padding-left: 19%;
+							a {
+								img {
+									max-width: 60%;
+									padding-left: 19%;
+								}
+							}
 						}
+						
 						.shares {
 							color: #000;
 							width: 0;
@@ -536,10 +541,10 @@ body {
 							width: 68%;
 							margin-left: 16%;
 							padding: 0 0 0 0;
-							img {
-								max-width: 100%;
-								padding-left:0;
-							}
+							// img {
+							// 	max-width: 100%;
+							// 	padding-left:0;
+							// }
 							&:hover {
 								opacity: 0.8;
 							}
@@ -620,7 +625,7 @@ body {
 						li:nth-child(1) {
 							width: 7%;
 							border: 1px solid #000;
-							padding: 0.2em 0 0 0;
+							padding: 0.2em 0 0.2em 0;
 							vertical-align: middle;
 								&:hover {
 								background-color: #5A5A5A;
@@ -649,7 +654,7 @@ body {
 		.product-des-main {
 			display: grid;
 			grid-template-columns: 0.6fr 2fr 4fr;
-			grid-gap: 0.5em;			
+			grid-gap: 10px;			
 			.product-img-one, .product-img-two {
 				border: 1px solid;
 			}
@@ -658,7 +663,7 @@ body {
 				text-align: center;
 				vertical-align:middle;
 				.product-img-one {
-					margin-bottom: 0.9em;
+					margin-bottom: 18px;
     				width: 6.3em;
 				}
 			}
@@ -705,22 +710,53 @@ body {
 		.product-reviews {
 			display: grid;
 			grid-template-columns: 1fr 7fr;
-			border: 1px solid #5A5A5A;
-			box-shadow: 0px 0px 5px 0px #081104;
+
 			.product-reviews-name {
 				display: grid;
 				grid-template-rows: 35px 35px;
-				padding: 0.3em 0 0.5em 0.7em;
-				.reviews-row-two a {
-					padding: 0.5em 4em 0.5em 0.5em;
-					background-color: #5A5A5A;
-					color: #fff;
+				// padding: 0.3em 0 0.5em 0.7em;
+				border-right: 1px solid $green;
+				text-align: center;
+				.reviews-row-one {
+					border-top: 1px solid $green;
+				    border-left: 5px solid $green;
+				    border-right: 5px solid #fff;
+				    border-bottom: 1px solid $green;
+				    padding-top: 6px;
+				    
+				}
+
+				.reviews-row-two {
+					background-color: $green;
+					border-top: 1px solid $green;
+					border-left: 1px solid $green;
+					border-right: 1px solid $green;
+					border-bottom: 1px solid $green;
+				    padding-top: 6px;
+				    	&:hover {
+				    		background-color: #fff;
+				    		border-top: none;
+							border-left: 5px solid $green;
+							border-right: none;
+							border-bottom: 1px solid $green;
+				    		a {
+				    			color: #000;
+				    		}
+				    	}
+						a {
+						// background-color: $green;
+						color: #fff;
+						} 
 				}
 			}
 			.product-reviews-text {
 				text-align: center;
 				padding: 1em;
 				color: #5A5A5A;
+				border-top: 1px solid #5A5A5A;
+				border-left: none;
+				border-right: 1px solid #5A5A5A;
+				border-bottom: 1px solid #5A5A5A;
 			}
 		}	
 		.recom-product {
